--- a/config/s3.yml
+++ b/config/s3.yml
@@ -1,5 +1,5 @@
 development:
-  bucket: shares-container
+  bucket: shares-container-dev
   access_key_id: AKIAJFVOO7GITNL6DDZA
   secret_access_key: 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
   s3_host_name: s3-ap-northeast-1.amazonaws.com
