--- a/config/s3.yml
+++ b/config/s3.yml
@@ -1,11 +1,11 @@
 development:
   bucket: shares-container-dev
-  access_key_id: AKIAJFVOO7GITNL6DDZA
-  secret_access_key: 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
+  access_key_id: xxx
+  secret_access_key: xxx
   s3_host_name: s3-ap-northeast-1.amazonaws.com
 
 production:
   bucket: shares-container
-  access_key_id: AKIAJFVOO7GITNL6DDZA
-  secret_access_key: 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
+  access_key_id: xxx
+  secret_access_key: xxx
   s3_host_name: s3-ap-northeast-1.amazonaws.com
